buttons correctly to the right form needs to be stretched

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -35,10 +35,6 @@ h1 {
 }
 
 
-.dropMenu{
-	width: 90%;
-}
-
 .fa-plus-circle {
 	color: #A3CCFF;
 }
